criação da div com a classe categoria-videos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     </div>
     </section>
 
-    <section>
-        <h2>Filmes e séries</h2>
+    <section class="categoria">
+    <h2>Filmes e séries</h2>
+    <div class="categoria-videos">
+
+    </div>
     </section>
 
 
